# wikipedia-neo4j

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
docs/: architecture.md  changelog.md  index.md  ingestion-hf.md  ingestion-wikipedia.md  operations.md  plan-deploy-neo4j-auradb.md  progress.md  setup.md
gan-harness/: build-report.md  eval-rubric.md  generator-state.md  spec.md
plans/: roadmap.md
reports/: chunking-improvement-research.md  defense-script.md  eval_graph_qa.json  eval_mcp_claude_20.json  eval_mcp_multihop.json  eval_multihop_qa_5.json  eval_results.json  eval_retrieval_200.json  eval_retrieval_full.json  eval_viquad2_results.json  improvement-research-report.md  ner-eval.json  ner-improvement-research.md  project-description-vi.md  project-spec.md  refactor-research.md  related-work-method.md  research-graphrag-improvements.md  thesis-defense.tex  thesis-presentation.html
scripts/: backfill_entities.py  benchmark_embeddings.py  build_communities.py  download_dataset.py  download_viquad.py  download_viwiki.py  embed_chunks.py  enrich_wikidata.py  eval_graph_qa.py  eval_kg_only.py  eval_mcp_claude.py  eval_multihop_qa.py  eval_retrieval_direct.py  eval_vector_rag.py  evaluate_ner.py  export_dataset.py  extract_relations.py  finetune_text2cypher.py  gen_weekly_slides.py  generate_decomposition.py  generate_dpo_pairs.py  generate_gold_cypher.py  generate_training_data.py  ingest_local_dataset.py  load_neo4j.py  migrate_schema.py  (+9 more)
(+146 files in other folders)
