[project]
name = "wikipedia-neo4j-demo"
version = "0.1.0"
description = "Minimal Wikipedia -> Neo4j GraphRAG demo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "neo4j>=5.23.0",
  "wikipedia>=1.4.0",
  "pydantic-settings>=2.4.0",
  "google-genai>=1.32.0",
  "datasets>=3.0.0",
  "sentence-transformers>=3.0.0",
  "underthesea>=9.5.0",
  "phonlp>=0.3.5,<0.4.0; sys_platform != 'win32'",
  "py-vncorenlp>=0.1.4",
  "transformers>=4.45.0",
  "accelerate>=1.0.0",
  "bitsandbytes>=0.44.0",
  "requests>=2.31.0",
  "pyarrow>=17.0.0",
  "qdrant-client>=1.12.0",
  "gradio>=5.0.0",
  "huggingface-hub>=0.25.0",
  "ragas>=0.2.0",
  "networkx>=3.2.0",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.0,<2.0.0",
  "mkdocs-material>=9.5.0,<10.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.0",
  "mypy>=1.11.0"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["site/"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/local_llm.py", "src/agent_tools.py", "src/app_gradio.py", "scripts/run_ragas_eval.py", "scripts/run_ablation.py", "src/retrieve.py", "src/text_utils.py", "src/ner.py"]
